import { Token as PSToken } from '@pancakeswap/sdk/dist/index.js';
import BigNumber from 'bignumber.js';

import { busd, xvs } from '__mocks__/models/tokens';

import { ChainId } from 'types';

import formatToSwap from '../formatToSwap';
import type { FormatToSwapInput } from '../types';

const fakeRoute = {
  path: [
    new PSToken(ChainId.BSC_TESTNET, busd.address, busd.decimals, busd.symbol),
    new PSToken(ChainId.BSC_TESTNET, xvs.address, xvs.decimals, xvs.symbol),
  ],
};

describe('pages/Swap/useGetSwapInfo/formatToSwap', () => {
  it('formats trade to swap correctly when direction is "exactAmountIn"', () => {
    const fakeTrade = {
      route: fakeRoute,
      inputAmount: new BigNumber(10),
      outputAmount: new BigNumber(10),
      executionPrice: new BigNumber(1),
      priceImpact: new BigNumber(0.001),
      minimumAmountOut: vi.fn(() => new BigNumber(9)),
    } as unknown as FormatToSwapInput['trade'];

    const fakeInput: FormatToSwapInput['input'] = {
      fromToken: busd,
      toToken: xvs,
      direction: 'exactAmountIn',
    };

    const res = formatToSwap({ trade: fakeTrade, input: fakeInput });

    expect(res).toMatchSnapshot();
  });

  it('formats trade to swap correctly when direction is "exactAmountOut"', () => {
    const fakeTrade = {
      route: fakeRoute,
      inputAmount: new BigNumber(10),
      outputAmount: new BigNumber(10),
      executionPrice: new BigNumber(1),
      priceImpact: new BigNumber(0.001),
      maximumAmountIn: vi.fn(() => new BigNumber(11)),
    } as unknown as FormatToSwapInput['trade'];

    const fakeInput: FormatToSwapInput['input'] = {
      fromToken: busd,
      toToken: xvs,
      direction: 'exactAmountOut',
    };

    const res = formatToSwap({ trade: fakeTrade, input: fakeInput });

    expect(res).toMatchSnapshot();
  });
});
